--- a/ciscolive-demo/documentation-llm/requirements.txt
+++ b/ciscolive-demo/documentation-llm/requirements.txt
@@ -62,8 +62,8 @@ peft==0.6.2
 pillow==10.2.0
 portalocker==2.8.2
 psutil==5.9.5
-psycopg2==2.9.9
 psycopg2-binary==2.9.7
+psycopg2
 py-cpuinfo==9.0.0
 pyarrow==15.0.0
 pycparser==2.21
