--- a/ciscolive-demo/documentation-llm/requirements.txt
+++ b/ciscolive-demo/documentation-llm/requirements.txt
@@ -1,107 +1,10 @@
-accelerate==0.24.1
-aiohttp==3.9.3
-aiosignal==1.3.1
-anyio==4.2.0
-async-timeout==4.0.3
-attrs==23.2.0
-beautifulsoup4==4.12.2
-bidict==0.22.1
-bitsandbytes==0.41.2.post2
-blinker==1.7.0
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-coloredlogs==15.0.1
-ctransformers==0.2.25
-datasets==2.14.6
-dill==0.3.7
-diskcache==5.6.3
-dnspython==2.4.2
-docker-pycreds==0.4.0
-emoji==2.8.0
-et-xmlfile==1.1.0
-evaluate==0.4.1
-eventlet==0.33.3
-filelock==3.13.1
-Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-SocketIO==5.3.6
-frozenlist==1.4.1
-fsspec==2023.10.0
-greenlet==3.0.3
-h11==0.14.0
-httpcore==0.18.0
-huggingface-hub==0.20.3
-humanfriendly==10.0
-idna==3.6
-iopath==0.1.10
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-kiwisolver==1.4.5
-layoutparser==0.3.4
-llama_cpp_python==0.2.37
-MarkupSafe==2.1.4
-mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.15
-nest-asyncio==1.5.8
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.2
-opencv-python==4.8.1.78
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.1.1
-pdf2image==1.16.3
-pdfminer.six==20221105
-pdfplumber==0.10.2
-peft==0.6.2
-pillow==10.2.0
-portalocker==2.8.2
-psutil==5.9.5
-psycopg2-binary==2.9.7
-py-cpuinfo==9.0.0
-pyarrow==15.0.0
-pycparser==2.21
-pypandoc==1.12
-pyparsing==3.1.1
-pypdfium2==4.20.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-engineio==4.8.2
-python-socketio==5.11.0
-pytz==2023.3.post1
-PyYAML==6.0.1
-regex==2023.8.8
-requests==2.31.0
-responses==0.18.0
-safetensors==0.4.2
-scikit-learn==1.3.0
-scipy==1.11.2
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-simple-websocket==1.0.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-sympy==1.12
-threadpoolctl==3.2.0
-tiktoken==0.5.1
-tokenizers==0.15.0
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.64.1
-transformers==4.37.2
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.9.0
-tzdata==2023.4
-urllib3==2.2.0
-Werkzeug==3.0.1
-wsproto==1.2.0
-xxhash==3.4.1
-yarl==1.9.4
+pdfminer.six
+torch
+transformers
+llama-cpp-python
+scikit-learn
+sentence-transformers
+transformers
+psycopg2-binary
+flask
+flask-cors
