--- a/ciscolive-demo/documentation-llm/Dockerfile
+++ b/ciscolive-demo/documentation-llm/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
+    wget \
     cmake \
     git \
     && apt-get clean \
